# realist

./: .gitignore  README.md  nginx.conf  package.json  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements.txt
API scraper/: MLS_data.csv  TruliaApiScraper.py  load_MLS.py
scripts/: add_cron_job.sh  kill_gunicorn_server.sh  start_celery_scheduler.sh  start_gunicorn_server.sh  stop_celery_scheduler.sh  trigger_trulia_scrape_runs.sh
src/: Pandas.py  TruliaApiScraper.py  constants.py  exceptions.py
src/backend/: exceptions.py
src/backend/database/common/: DatabaseConnectionPool.py  constants.py  trulia_controller.py
src/backend/database/dao/: TruliaHouseListingDAO.py  UserDAO.py
src/backend/database/models/: ModelAttribute.py  TruliaHouseListing.py  User.py
src/backend/helpers/: common_helpers.py  database_helpers.py
src/backend/server/: flask_index.py
src/backend/server/utils/: Scheduler.py  (+4 more)
src/backend/tests/: conftest.py
src/database/common/: DatabaseConnectionPool.py  constants.py  trulia_controller.py
src/database/dao/: TruliaHouseListingDAO.py
src/database/models/: ModelAttribute.py  TruliaHouseListing.py
src/database/services/: TruliaHouseListingService.py
src/frontend/: package.json  vite.config.js
src/frontend/realist-app/: index.html
src/helpers/: common_helpers.py
src/legacy/: Pandas.py  database_operations.py
src/realist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scrapers/: Scraper.py
src/trulia/: trulia_dataparser.py  trulia_payloadgenerator.py  trulia_scraper.py
tests/: __init__.py  conftest.py
tests/data/: 405_response.html  expected_detailed_scrape_payload.json  expected_house_scan_default_payload.json  expected_house_scan_modified_variables_payload.json  fixtures_data.py  mocked_trulia_detailed_scrape_response_default.json  mocked_trulia_detailed_scrape_response_simple.json  mocked_trulia_house_scan_response_default.json  mocked_trulia_urls_list.json
tests/integration/trulia/: test_scrape.py
tests/trulia/: test_trulia_dataparser.py  test_trulia_payloadgenerator.py  test_truliascraper.py
tests/unit/database/: test_truliahouselisting_dao.py  test_truliahouselisting_model.py  test_truliahouselisting_service.py
tests/unit/trulia/: test_trulia_dataparser.py  test_trulia_payloadgenerator.py  test_truliascraper.py
(+57 files in other folders)
