[tool.poetry]
name = "realist"
version = "0.1.0"
description = "An scraping project for real estate listings"
authors = ["Ryan Dao <ryeedao@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "backend"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
psycopg = { version = "^3.1.19", extras = ["binary", "pool"] }
Flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"