[tool.poetry]
name = "realist"
version = "0.1.0"
description = "An scraping project for real estate listings"
authors = ["Ryan Dao <ryeedao@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start-flask = "src.backend.server.flask_index:main"

[[tool.poetry.packages]]
include = "backend"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
psycopg = { version = "^3.1.19", extras = ["binary", "pool"] }
bcrypt = "^4.1.3"
Flask = "^3.0.3"
Flask-Injector = "^0.15.0"
PyJWT = "^2.8.0"
Flask-JWT-Extended = "^4.6.0"
gunicorn = "^22.0.0"
APScheduler = "^3.10.4"
SQLAlchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.coverage.run]
omit = [
    "src/backend/tests/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"